filter css added

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import './components/product-card/index.scss';
 @import './components/mini-basket/index.scss';
 @import './components/counter/index.scss';
+@import './components/filter/index.scss';
